fix(ui): search kbd color change, sidebar spacing increased

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -34,6 +34,8 @@
     --ifm-color-primary-lightest: #6791fc;
     --ifm-code-font-size: 95%;
 
+    --ifm-spacing-horizontal: 1.5rem;
+
     --ifm-background-color: #ffffff;
 
     --doc-sidebar-width: 340px;
